@@ -56,6 +56,7 @@ int specplus3_memory_map( void );
 typedef enum specplus3_drive_number {
   SPECPLUS3_DRIVE_A = 0,	/* First drive must be number zero */
   SPECPLUS3_DRIVE_B,
+  SPECPLUS3_NUM_DRIVES,
 } specplus3_drive_number;
 
 int specplus3_disk_insert( specplus3_drive_number which, const char *filename,
